<resources>
    <string name="app_name">WanAndroid</string>
    <string name="home">首页</string>
    <string name="knowledge_system">知识体系</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="wechat">公众号</string>
    <string name="net_error">网络错误</string>
    <string name="login_please">请先登录</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Nav-->
    <string name="nav_my_demo">Demo模块</string>
    <string name="nav_my_score">我的积分</string>
    <string name="nav_logout">退出登录</string>
    <string name="nav_collect">我的收藏</string>
    <string name="nav_grade">等级:</string>
    <string name="nav_rank">排名:</string>
    <string name="nav_name">去登陆</string>

    <!--Login-->
    <string name="login_userlogin">用户登录</string>
    <string name="login_userlogin_des">请使用WanAndroid账号登录！</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="login_no_account">没有账号？去注册</string>
    <string name="please_login">请先登录</string>

    <string name="register_userreg">注册用户</string>
    <string name="register_regdes">用户注册后才可以登录！</string>
    <string name="register_username">用户名</string>
    <string name="register_password">密码</string>
    <string name="register_retry_password">再输入一次密码</string>
    <string name="register">注册</string>
    <string name="register_no_account">已有账户？去登录</string>

    <string name="username_not_empty">用户名不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="confirm_password_not_empty">确认密码不能为空</string>
    <string name="password_cannot_match">两个密码不相同</string>

    <!--search-->
    <string name="search_hot">热门搜索</string>
    <string name="search_history">热门历史</string>
    <string name="search_clear">清空</string>
    <string name="search_tint">搜索更多</string>

    <!--web-->
    <string name="web_isloading">正在加载</string>

</resources>
