<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/other">

        <item
            android:id="@+id/nav_score"
            android:icon="@drawable/ic_score_white_24dp"
            android:title="@string/nav_my_score"
            app:actionViewClass="android.widget.TextView" />

        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/ic_score_white_24dp"
            android:title="@string/nav_collect"
            app:actionViewClass="android.widget.TextView" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_score_white_24dp"
            android:title="@string/nav_logout"
            app:actionViewClass="android.widget.TextView" />
    </group>

</menu>