<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <data class="LoginViewmodelBinding">
        <variable
            name="LoginViewmodel"
            type="com.xiamu.wanandroid.mvvm.viewmodel.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/viewBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <include layout="@layout/toolbar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_24"
                android:paddingRight="@dimen/dp_24"
                android:paddingTop="40dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_userreg"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_regdes"
                    android:textColor="@color/Grey"
                    android:textSize="@dimen/sp_14"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    >

                    <EditText
                        android:id="@+id/et_register_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_username"
                        android:inputType="textEmailAddress"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    >

                    <EditText
                        android:id="@+id/et_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_password"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    >

                    <EditText
                        android:id="@+id/et_retry_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_retry_password"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_marginBottom="@dimen/dp_24"
                    android:text="@string/register"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/white"
                    android:background="@color/Blue"
                    android:gravity="center"
                    android:padding="@dimen/dp_12"
                    />

                <TextView
                    android:id="@+id/tv_register_noaccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_no_account"
                    android:textSize="@dimen/sp_16"
                    android:gravity="right"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>




</layout>