<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data class="LoginBinding">
        <variable
            name="Login"
            type="com.xiamu.wanandroid.mvvm.model.pojo.LoginPojo" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/viewBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <include layout="@layout/toolbar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_24"
                android:paddingRight="@dimen/dp_24"
                android:paddingTop="40dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_userlogin"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_userlogin_des"
                    android:textColor="@color/Grey"
                    android:textSize="@dimen/sp_14"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    >

                    <EditText
                        android:id="@+id/et_login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_username"
                        android:inputType="textEmailAddress"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    >

                    <EditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_password"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_marginBottom="@dimen/dp_24"
                    android:text="@string/login"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/white"
                    android:background="@color/Blue"
                    android:gravity="center"
                    android:padding="@dimen/dp_12"
                    />

                <TextView
                    android:id="@+id/tv_login_noaccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_no_account"
                    android:textSize="@dimen/sp_16"
                    android:gravity="right"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>