<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data class="SearchViewModelBinding">

        <variable
            name="viewmodel"
            type="com.xiamu.wanandroid.mvvm.viewmodel.SearchViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/viewBackground"
        >

        <include layout="@layout/toolbar_search"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dp_12"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_hot"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/Light_Blue"
                    />

                <com.zhy.view.flowlayout.TagFlowLayout
                    android:id="@+id/fl_hot_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_24"
                    >

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/search_history"
                       android:textSize="@dimen/sp_16"
                       android:textColor="@color/Light_Blue"
                       />

                    <TextView
                        android:id="@+id/tv_clear_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_clear"
                        android:textSize="@dimen/sp_16"
                        android:textColor="@color/black"
                        android:layout_alignParentRight="true"
                        />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_history_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_12"
                    android:background="@color/viewBackground"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>