<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:paddingLeft="@dimen/dp_16"
    android:paddingTop="@dimen/dp_36"
    android:paddingRight="@dimen/dp_16"
    android:paddingBottom="@dimen/dp_10"
    >

    <ImageView
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:src="@drawable/ic_rank_white_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_default_avatar"
        app:civ_border_color="@color/white"
        app:civ_border_width="@dimen/dp_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_name"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
        app:layout_constraintStart_toStartOf="@+id/circleImageView"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView"
        android:layout_marginTop="@dimen/dp_12"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_tologin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nav_grade"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/tv_user_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="--"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dp_8"
            android:text="@string/nav_rank"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/tv_user_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="--"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>